--- a/src/App.css
+++ b/src/App.css
@@ -133,27 +133,7 @@ body {
 /* media querie max width 1500px */
 @media (max-width: 1440px) {
   .Cards {
-    /* grid with two rows and the second row has his card centered */
-    grid-template-columns: repeat(2, 1fr);
-    grid-template-rows: repeat(2, 1fr);
-    /* gutter */
-    grid-column-gap: 1em;
-    grid-template-areas:
-      'card-1 card-2'
-      'card-3 card-3';
-    /* center the cards */
-    margin: 0 auto;
-  }
-  .App {
-    margin: 2em 0;
-  }
-  .Card {
-    border-radius: 10px !important;
-  }
-  .Card:nth-child(3) {
-    grid-area: card-3;
-    justify-self: center;
-    margin-top: 2em;
+    margin: 0 3em;
   }
 }
 
@@ -166,7 +146,7 @@ body {
       'card-1'
       'card-2'
       'card-3';
-    margin-left: 0;
+    margin: 0 auto;
   }
   .App {
     margin: 2em 2em;
